--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "leapedfrog"
+name = "octopus"
 dynamic = ["version"]
 description = "An equivalence checker for P4 packet parsers"
 readme = { file = "README.md", content-type = "text/markdown" }
@@ -33,25 +33,25 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = [
+dev = [Re
     "ruff ~= 0.11.9",
 ]
 
 [project.urls]
-"source" = "https://github.com/jortvanleenen/LeapedFrog"
-"release notes" = "https://github.com/jortvanleenen/LeapedFrog/releases"
+"source" = "https://github.com/jortvanleenen/Octopus"
+"release notes" = "https://github.com/jortvanleenen/Octopus/releases"
 
 [project.scripts]
-leapedfrog = "leapedfrog.main:main"
+octopus = "octopus.main:main"
 
 [tool.hatch.build.targets.sdist]
 include = ["src", "README.md", "LICENSE", "pyproject.toml"]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/leapedfrog"]
+packages = ["src/octopus"]
 
 [tool.hatch.version]
-path = "src/leapedfrog/__about__.py"
+path = "src/octopus/__about__.py"
 
 [tool.ruff]
 target-version = "py313"
