--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "octopus"
 dynamic = ["version"]
-description = "An equivalence checker for P4 packet parsers"
+description = "An equivalence checker for P4 packet parsers."
 readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.10"
 license = { file = "LICENSE" }
@@ -15,7 +15,7 @@ authors = [
 maintainers = [
     { name = "Jort van Leenen", email = "jort@vleenen.nl" },
 ]
-keywords = ["p4", "parser", "equivalence", "checker"]
+keywords = ["p4", "parser", "equivalence checker", "smt", "networking", "security"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
