Add programs-survey initial and plotter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,9 +34,11 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
+    "matplotlib ~= 3.10.8",
+    "numpy ~= 2.2.6",
+    "pre-commit ~= 4.5.1",
     "ruff ~= 0.14.14",
     "tqdm ~= 4.67.1",
-    "pre-commit ~= 4.5.1",
 ]
 
 [project.urls]
